--- a/main.css
+++ b/main.css
@@ -1,5 +1,17 @@
+.icon {
+    width: 1em; height: 1em;
+    vertical-align: -0.15em;
+    fill: currentColor;
+    overflow: hidden;
+}
+ol{
+    list-style: none;
+}
+*{
+    margin: 0;
+    padding:0;
+}
 #xxx{
-    background: green;
     display: block;
 }
 
@@ -12,11 +24,24 @@ html{
 
 .actions{
     position: fixed;
-    bottom: 0;
+    top: 0;
     left: 0;
+    padding: 15px;
+}
+.actions svg{
+    width: 1.5rem;
+    height: 1.5rem;
+    transition: all 0.3s;
+    padding: 0 10px;
+}
+.active{
+    color: red;
+    transform: scale(1.2);
+
 }
 .actions > #brush{
     display: none;
+
 }
 
 .actions.x > #brush{
@@ -24,4 +49,31 @@ html{
 }
 .actions.x > #eraser{
     display: none
+}
+.colors{
+    position: fixed;
+    top: 50px;
+    left:18px;
+}
+.colors li{
+    width: 20px;
+    height: 20px;
+    border: 2px solid gray;
+    margin: 10px 0;
+    border-radius: 50%;
+}
+.colors li.black{
+    background: black;
+}
+.colors li.red{
+    background: red;
+}
+.colors li.green{
+    background: green;
+}
+.colors li.blue{
+    background: blue;
+}
+.colors li.active{
+    transform: scale(1.2);
 }
